0026945: Visualization - selection does not work after closing one of local contexts in stack

- added method to restore selection of local context;
- activated standard modes are added to local status now;
- test case for issue #26945