src/AIS/AIS_InteractiveContext_2.cxx
@@ -148,7 +148,10 @@ void AIS_InteractiveContext::CloseLocalContext(const Standard_Integer Index,
    }
    else if(debugmode)
      cout<<"a No Current Local Context WasClosed"<<endl;
-   
+
+   // restore activated selections of current local context
+   myLocalContexts (myCurLocalIndex)->RestoreActivatedModes();
+
    if(debugmode) cout<<"Index Of CurrentLocalContext:"<<myCurLocalIndex<<endl;
    
  }
